--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <div class="container">
       <div id="home">
         <div class="homeText">
-          <img src="images/logo/logo.png" class="img-fluid" />
+          <img src="images/backgrounds/logo/logo.png" class="img-fluid" />
           <p id="welcome">WELCOME</p>
           <p id="delani">TO DELANI STUDIO</p>
           <p class="amazing">
             AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT
           </p>
           <div class="joker">
-            <img src="images/mouse_click.png" class="box bounce-5" />
+            <img src="images/backgrounds/logo/mouse_click.png" class="box bounce-5" />
           </div>
         </div>
         <!-- 
@@ -80,7 +80,7 @@
         <div class="row" id="content">
           <div class="col-sm design">
             <div id="designImg">
-              <img src="images/services_icons/design_icon.png" />
+              <img src="images/backgrounds/services_icons/design_icon.png" />
               <h5>DESIGN</h5>
             </div>
             <div id="designContent">
@@ -100,7 +100,7 @@
 
           <div class="col-sm development">
             <div id="developmentImg">
-              <img src="images/services_icons/dev_icon.png" />
+              <img src="images/backgrounds/services_icons/dev_icon.png" />
               <h5>DEVELOPMENT</h5>
             </div>
             <div id="developmentContent">
@@ -119,7 +119,7 @@
 
           <div class="col-sm productManagement">
             <div id="managementImg">
-              <img src="images/services_icons/product_icon.png" />
+              <img src="images/backgrounds/services_icons/product_icon.png" />
               <h5>PRODUCT MANAGEMENT</h5>
             </div>
             <div id="managementContent">
@@ -145,7 +145,7 @@
             <div>
               <div class="view overlay" id="img1">
                 <img
-                  src="images/portfolio/work4.jpg"
+                  src="images/backgrounds/portfolio/work4.jpg"
                   class="card-img-top img-fluid"
                 />
               </div>
@@ -156,7 +156,7 @@
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img2">
-                <img src="images/portfolio/work3.jpg" class="card-img-top" />
+                <img src="images/backgrounds/" class="card-img-top" />
               </div>
               <p id="project2" class="project">PICTURES</p>
             </div>
