--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
           <div class="col-sm productManagement">
             <div id="managementImg">
-              <img src="images/backgrounds/services_icons/product_icon.png" />
+              <img src="images/backgrounds/services_icons/product_icon.png"/>
               <h5>PRODUCT MANAGEMENT</h5>
             </div>
             <div id="managementContent">
@@ -156,7 +156,7 @@
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img2">
-                <img src="images/backgrounds/" class="card-img-top" />
+                <img src="images/backgrounds/portfolio/work3.jpg" class="card-img-top" />
               </div>
               <p id="project2" class="project">PICTURES</p>
             </div>
@@ -165,27 +165,36 @@
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img3">
-                <img src="images/portfolio/work2.jpg" class="card-img-top" />
+                <img src="images/backgrounds/portfolio/work2.jpg" class="card-img-top" />
               </div>
               <p id="project3" class="project">ONTARIO</p>
             </div>
           </div>
 
-          <div class="col-md-3 mb-4 d-flex align-items-stretch">
+        <div class="col-md-3 mb-4 d-flex align-items-stretch">
+            <div>
+              <div class="view overlay" id="img3">
+                <img src="images/backgrounds/portfolio/work1.jpg" class="card-img-top" />
+              </div>
+              <p id="project3" class="project">ONTARIO</p>
+            </div>
+          </div>
+
+          <!-- <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img4">
-                <img src="images/portfolio/work1.jpg" class="card-img-top" />
+                <img src="images/backgrounds/portfolio/" class="card-img-top" />
               </div>
               <p id="project4" class="project">MUSIC PLAYER</p>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="row pic">
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img5">
-                <img src="images/portfolio/work8.jpg" class="img-fluid" />
+                <img src="images/backgrounds/portfolio/work8.jpg" class="img-fluid" />
               </div>
 
               <p id="project5" class="project">VIDEO EDITOR</p>
@@ -195,7 +204,7 @@
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img6">
-                <img src="images/portfolio/work7.jpg" class="card-img-top" />
+                <img src="images/backgrounds/portfolio/work7.jpg" class="card-img-top" />
               </div>
               <p id="project6" class="project">CALENDER</p>
             </div>
@@ -203,7 +212,7 @@
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img7">
-                <img src="images/portfolio/work6.jpg" class="card-img-top" />
+                <img src="images/backgrounds/portfolio/work6.jpg" class="card-img-top" />
               </div>
               <p id="project7" class="project">LOGO MAKER</p>
             </div>
@@ -211,7 +220,7 @@
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
               <div class="view overlay" id="img8">
-                <img src="images/portfolio/work5.jpg" class="card-img-top" />
+                <img src="images/backgrounds/portfolio/work5.jpg" class="card-img-top" />
               </div>
               <p id="project8" class="project">LOGO RESTAURANT</p>
             </div>
