--- a/index.html
+++ b/index.html
@@ -295,31 +295,31 @@
       <div id="socialMedia" class="col-6 mx-auto">
         <div class="row">
           <div class="col">
-            <a href=""><img src="images/social_icons/twitter.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/twitter.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/dribble.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/dribble.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/facebook.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/facebook.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/g_plus.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/g_plus.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/skype.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/skype.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/stumble_upon.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/stumble_upon.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/behance.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/behance.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/pinterest.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/you_tube.png" /></a>
           </div>
           <div class="col">
-            <a href=""><img src="images/social_icons/flickr.png" /></a>
+            <a href=""><img src="images/backgrounds/social_icons/flickr.png" /></a>
           </div>
         </div>
       </div>
@@ -327,15 +327,15 @@
     <footer>
       <div class="container text-muted text-center py-3 mt-5">
         <h5>
-          Copyright &copy;|
-          <a href="https://github.com/Benardakaka?tab=repositories">
-            Delani Studio<br />2019</a
+
+          <a href="https://github.com/cwanjugu/Delani-Studio">
+            Delani Studio<br />2020</a
           >
         </h5>
       </div>
     </footer>
-    <script
-      type="text/javascript"
+    <!-- <script
+      <!-- type="text/javascript"
       src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
     ></script>
     <script type="text/javascript">
@@ -352,6 +352,6 @@
         ftypes[4] = "phone";
       })(jQuery);
       var $mcj = jQuery.noConflict(true);
-    </script>
+    </script> --> -->
   </body>
 </html>
