--- a/index.html
+++ b/index.html
@@ -230,12 +230,14 @@
 
       <div class="contactUs">
         <h3 id="contact">Contact Us</h3>
+
         <form
           class="p-3 mt-3 col-md-6 mx-auto"
           id="formContact"
-          onsubmit="main()"
-          action="https://gmail.us2.list-manage.com/subscribe/post?u=cc9835a6385c6c2c9bbc3d4ea&amp;id=62513787c8"
-          method="post"
+          onsubmit="carol()"
+          action="https://gmail.us2.list-manage.com/subscribe/post?u=976df0b29e08b35fa8c7e9329&amp;id=9b023492f4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+          
           id="mc-embedded-subscribe-form"
           name="mc-embedded-subscribe-form"
           class="validate"
