--- a/index.html
+++ b/index.html
@@ -6,16 +6,11 @@
     <title>Delani Studio</title>
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-    />
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <link
-      href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+   
   </head>
 
   <body>
@@ -336,24 +331,5 @@
         </h5>
       </div>
     </footer>
-    <!-- <script
-      <!-- type="text/javascript"
-      src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
-    ></script>
-    <script type="text/javascript">
-      (function ($) {
-        window.fnames = new Array();
-        window.ftypes = new Array();
-        fnames[0] = "EMAIL";
-        ftypes[0] = "email";
-        fnames[1] = "FNAME";
-        ftypes[1] = "text";
-        fnames[2] = "LNAME";
-        ftypes[2] = "text";
-        fnames[4] = "PHONE";
-        ftypes[4] = "phone";
-      })(jQuery);
-      var $mcj = jQuery.noConflict(true);
-    </script> --> -->
-  </body>
+   
 </html>
