--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="/js/scripts.js"></script>
    
   </head>
 
@@ -232,13 +232,6 @@
           onsubmit="carol()"
           action="https://gmail.us2.list-manage.com/subscribe/post?u=976df0b29e08b35fa8c7e9329&amp;id=9b023492f4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-          
-          id="mc-embedded-subscribe-form"
-          name="mc-embedded-subscribe-form"
-          class="validate"
-          target="_blank"
-          novalidate
-        >
           <div class="form-group">
             <div class="row">
               <div class="col">
