--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
           </div>
 
           <div class="col-sm development">
-            <div id="developmentImg">
+            <div id="progressImg">
               <img src="images/backgrounds/services_icons/dev_icon.png" />
               <h5>DEVELOPMENT</h5>
             </div>
-            <div id="developmentContent">
+            <div id="progressContent">
               <h5 id="h5">DEVELOPMENT</h5>
               <p>
                 All engineers are fluent in the latest enterprise, mobile and
@@ -132,7 +132,7 @@
           </div>
         </div>
       </div>
-
+    </div>
       <div class="container">
         <h2 id="port">PORTFOLIO</h2>
         <div class="row">
@@ -144,7 +144,7 @@
                   class="card-img-top img-fluid"
                 />
               </div>
-              <p id="project1" class="project">VIDEO EDITOR</p>
+              <p id="proj1" class="project">VIDEO EDITOR</p>
             </div>
           </div>
 
@@ -153,7 +153,7 @@
               <div class="view overlay" id="img2">
                 <img src="images/backgrounds/portfolio/work3.jpg" class="card-img-top" />
               </div>
-              <p id="project2" class="project">PICTURES</p>
+              <p id="proj2" class="project">PICTURES</p>
             </div>
           </div>
 
@@ -162,28 +162,23 @@
               <div class="view overlay" id="img3">
                 <img src="images/backgrounds/portfolio/work2.jpg" class="card-img-top" />
               </div>
-              <p id="project3" class="project">ONTARIO</p>
+              <p id="proj3" class="project">ONTARIO</p>
             </div>
           </div>
 
         <div class="col-md-3 mb-4 d-flex align-items-stretch">
             <div>
-              <div class="view overlay" id="img3">
+              <div class="view overlay" id="img4">
                 <img src="images/backgrounds/portfolio/work1.jpg" class="card-img-top" />
               </div>
-              <p id="project3" class="project">ONTARIO</p>
+              <p id="proj4" class="project">ONTARIO</p>
             </div>
           </div>
 
-          <!-- <div class="col-md-3 mb-4 d-flex align-items-stretch">
-            <div>
-              <div class="view overlay" id="img4">
-                <img src="images/backgrounds/portfolio/" class="card-img-top" />
-              </div>
-              <p id="project4" class="project">MUSIC PLAYER</p>
-            </div>
-          </div>
-        </div> -->
+
+
+
+
 
         <div class="row pic">
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
@@ -191,8 +186,7 @@
               <div class="view overlay" id="img5">
                 <img src="images/backgrounds/portfolio/work8.jpg" class="img-fluid" />
               </div>
-
-              <p id="project5" class="project">VIDEO EDITOR</p>
+              <p id="proj5" class="work">CALENDER</p>
             </div>
           </div>
 
@@ -201,7 +195,7 @@
               <div class="view overlay" id="img6">
                 <img src="images/backgrounds/portfolio/work7.jpg" class="card-img-top" />
               </div>
-              <p id="project6" class="project">CALENDER</p>
+              <p id="proj6" class="work">RAIN MAKER</p>
             </div>
           </div>
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
@@ -209,7 +203,7 @@
               <div class="view overlay" id="img7">
                 <img src="images/backgrounds/portfolio/work6.jpg" class="card-img-top" />
               </div>
-              <p id="project7" class="project">LOGO MAKER</p>
+              <p id="proj7" class="work">Logo RESTAURANT</p>
             </div>
           </div>
           <div class="col-md-3 mb-4 d-flex align-items-stretch">
@@ -217,11 +211,12 @@
               <div class="view overlay" id="img8">
                 <img src="images/backgrounds/portfolio/work5.jpg" class="card-img-top" />
               </div>
-              <p id="project8" class="project">LOGO RESTAURANT</p>
+              <p id="proj8" class="work">LOGO MAKER</p>
             </div>
           </div>
         </div>
       </div>
+      
 
       <div class="contactUs">
         <h3 id="contact">Contact Us</h3>
